test/pointer/fail/Pointer_cast02.v3
//@execute = 42
component Pointer_cast02 {
	def main() -> int {
		var x: Pointer;
		var y = int.!(x);
		return 42;
	}
}
